# mia.jetzt

./: .gitignore  .gitmodules  Cargo.toml  README.md
redis/: searxng-redis.toml
router/: Cargo.toml  Dockerfile  fly.toml
router/src/: config.rs  main.rs
searxng/: Dockerfile  fly.toml  settings.yml.tmpl
site/: .dockerignore  Cargo.toml  Dockerfile  build.rs  fly.toml  styles.sass
site/src/: main.rs
site/templates/: base.html  index.html
