[package]
name = "router"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
eyre = "0.6.8"
hyper = { version = "0.14.20", features = ["full"] }
ron = "0.8.0"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["fmt"] }
