[package]
name = "site"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.15"
eyre = "0.6.8"
include_dir = "0.7.2"
tera = "1.17.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[build-dependencies]
sass-rs = "0.2.2"
